	(MAXSYMLINKS): Define only if [SYMLOOP_MAX].

	* misc/mkstemp.c [!defined O_LARGEFILE || O_LARGEFILE == 0]:
	Define mkstemp64 as an alias.
	* misc/mkstemps.c [!defined O_LARGEFILE || O_LARGEFILE == 0]:
	Define mkstemps64 as an alias.
	* misc/mkostemp.c [!defined O_LARGEFILE || O_LARGEFILE == 0]:
	Define mkostemp64 as an alias.
	* misc/mkstemp64.c [defined O_LARGEFILE && O_LARGEFILE != 0]:
	Conditionalize body on this.
	* misc/mkostemp64.c: Likewise.
	* misc/mkstemps64.c: Likewise.
	* sysdeps/wordsize-64/mkstemp64.c: File removed.
	* sysdeps/wordsize-64/mkostemp64.c: File removed.
	* sysdeps/wordsize-64/mkostemp.c: File removed.
	* sysdeps/wordsize-64/mkstemp.c: File removed.
	* sysdeps/unix/sysv/linux/x86_64/x32/mkstemp64.c: File removed.
	* sysdeps/unix/sysv/linux/x86_64/x32/mkostemp64.c: File removed.
	* sysdeps/unix/sysv/linux/x86_64/x32/mkostemp.c: File removed.
	* sysdeps/unix/sysv/linux/x86_64/x32/mkstemp.c: File removed.

	[BZ #14138]
	* sysdeps/unix/sysv/linux/syscalls.list: Add getrlimit/ugetrlimit line.
	* sysdeps/unix/sysv/linux/i386/getrlimit.c: File removed.
	* sysdeps/unix/sysv/linux/powerpc/getrlimit.c: File removed.
	* sysdeps/unix/sysv/linux/sh/getrlimit.c: File removed.

	* sysdeps/unix/make-syscalls.sh: Emit uses of the versioned_symbol and
	compat_symbol macros from <shlib-compat.h> rather than the underlying
	default_symbol_version and symbol_version macros, so that DEFAULT
	lines in shlib-versions are respected.
	* sysdeps/unix/Makefile ($(objpfx)stub-syscalls.c): Likewise.

2012-08-01  Florian Weimer  <fweimer@redhat.com>

	* posix/unistd.h (setuid, setreuid, seteuid, setresuid):
	Declare with warn_unused_result.
	(setgid, setregid, setegid, setresgid): Likewise.
	* sysdeps/unix/sysv/linux/sys/fsuid.h (setfsuid, setfsgid):
	Likewise.
	* WUR-REPORT: Remove set*id functions.

2012-07-31  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/renameat.c: New file, mostly copied from rename.c.
